# sparse-mixed-precision-solver

./: .gitignore  .gitmodules  README.md
Benchmark/: Benchmarks.py  requirements.txt  solver_interface.py
sparse-mixed-precision-solver/: CMakeLists.txt  build.ps1  thirdparty_setup.ps1
sparse-mixed-precision-solver/include/: Solver.hpp
sparse-mixed-precision-solver/src/: Solver.cpp  SparseMatrix.cpp
sparse-mixed-precision-solver/test/: test_Solver.cpp
